# polygon-client-rs

./: Cargo.toml  LICENSE  README.md
src/: aggs.rs  error.rs  indicators.rs  lib.rs  macros.rs  market.rs  quotes.rs  reference.rs  snapshot.rs  trades.rs  vx.rs
src/models/: aggs.rs  conditions.rs  contracts.rs  dividends.rs  exchanges.rs  financials.rs  indicators.rs  markets.rs  quotes.rs  snapshot.rs  splits.rs  summaries.rs  tickers.rs  trades.rs  types.rs
