[package]
name = "polygon-client-rs"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7" }
serde_with = { version = "1.10", features = ["chrono"] }
reqwest = { version = "0.11", features = ["json"] }
